--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-*/config/development
-*/logs/log-*.php
-*/logs/!index.html
-*/cache/*
-*/cache/!index.html
+    #java specific
+    *.class
+
+    #netbeans ignore personal stuff
+    nbproject/
+
+    ## generic files to ignore
+    *~
+    *.lock
+    *.DS_Store
+    *.swp
+    *.out
+
+    # Package Files #
+    *.jar
+    *.war
+    *.ear
